[package]
name = "currency-converter"
version = "0.0.1"
authors = ["Moritz Hoffmann <mohoff@web.de>"]
description = "Currency conversion on the command line"
documentation = "https://github.com/mohoff/currency-converter"
homepage = "https://github.com/mohoff/currency-converter"
repository = "https://github.com/mohoff/currency-converter"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["currency", "money", "conversion", "productivity"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3.5"
rust_decimal = "1.8.1"
futures-core = "0.3.5"
colored = "2"
itertools = "0.9"
